--- a/static/iconfont/iconfont.css
+++ b/static/iconfont/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3931247 */
-  src: url('//at.alicdn.com/t/c/font_3931247_zf0zwfydtq.woff2?t=1678198329637') format('woff2'),
-       url('//at.alicdn.com/t/c/font_3931247_zf0zwfydtq.woff?t=1678198329637') format('woff'),
-       url('//at.alicdn.com/t/c/font_3931247_zf0zwfydtq.ttf?t=1678198329637') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_3931247_ozdkgic4dn8.woff2?t=1678525477309') format('woff2'),
+       url('//at.alicdn.com/t/c/font_3931247_ozdkgic4dn8.woff?t=1678525477309') format('woff'),
+       url('//at.alicdn.com/t/c/font_3931247_ozdkgic4dn8.ttf?t=1678525477309') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-close:before {
+  content: "\e6e9";
 }
 
 .icon-brush:before {
